--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <option value="Otros">Otros</option>
             </select>
             <div id="seccionExpediente" class="hidden-section">
-                <label>Número de Expediente *</label><input type="text" id="expediente">
+                <label>Número de Expediente Ejemplo: 000/AÑO*</label><input type="text" id="expediente">
                 <label>Número de Juzgado y/o Entidad *</label><input type="text" id="juzgado">
             </div>
             <div id="seccionOtros" class="hidden-section">
@@ -94,7 +94,7 @@
             </div>
             <label class="check-container">
                 <input type="checkbox" id="aceptoReglamento" required>
-                <span>He leído y acepto el reglamento y lineamientos. *</span>
+                <span>He leído y acepto el reglamento. *</span>
             </label>
             <button type="submit" id="btnEnviar" class="btn-main">Realizar Inscripción</button>
         </form>
