--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <option value="Otros">Otros</option>
             </select>
             <div id="seccionExpediente" class="hidden-section">
-                <label>Número de Expediente Ejemplo: 000/AÑO*</label><input type="text" id="expediente">
+                <label>Número de Expediente: (Ejemplo 000/AÑO)*</label><input type="text" id="expediente">
                 <label>Número de Juzgado y/o Entidad *</label><input type="text" id="juzgado">
             </div>
             <div id="seccionOtros" class="hidden-section">
