Correct spelling of 'Quien' to 'Quién' in label

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <input type="tel" id="telefono" maxlength="10" pattern="[0-9]{10}" required>
             <label>Taller que va a cursar *</label>
             <select id="taller" required><option value="">Cargando talleres...</option></select>
-            <label>Quien canaliza *</label>
+            <label>Quién canaliza *</label>
             <select id="canaliza" required onchange="manejarCanalizacion(this.value)">
                 <option value="">Seleccione...</option>
                 <option value="Juzgado Familiar">Juzgado Familiar</option>
