--- a/admin.html
+++ b/admin.html
@@ -114,11 +114,18 @@
                 </div>
             </div>
 
-            <div id="sec-catalogos" class="content-section" style="display:none;">
+           <div id="sec-catalogos" class="content-section" style="display:none;">
                 <h1>Gestión de Talleres</h1>
                 <div class="table-card">
                     <table>
-                        <thead><tr><th>ID</th><th>Taller</th><th>Estatus</th><th>Acción</th></tr></thead>
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Taller</th>
+                                <th>Impartido Por</th> <th>Estatus</th>
+                                <th>Acción</th>
+                            </tr>
+                        </thead>
                         <tbody id="body-catalogos"></tbody>
                     </table>
                 </div>
