--- a/admin.html
+++ b/admin.html
@@ -265,11 +265,12 @@
 
     <script>
 
-// ✅ USA LA DE APPS SCRIPT PARA AMBAS (Pega tu URL real aquí)
-const URL_APPS_SCRIPT = 'https://script.google.com/macros/s/AKfycby3HeIk2O6LsVlyYpHX1q5MckNU9_FYfqKKtShmSqUJ1Qpl5pKTAvCZ6vMqy0cY7IQ/exec';
+// ⚠️ PEGA AQUÍ TU URL DE APPS SCRIPT (La que termina en /exec)
+        const URL_APPS_SCRIPT = 'https://script.google.com/macros/s/AKfycby3HeIk2O6LsVlyYpHX1q5MckNU9_FYfqKKtShmSqUJ1Qpl5pKTAvCZ6vMqy0cY7IQ/exec';
 
-const WEBHOOK_LOGIN = URL_APPS_SCRIPT;
-const WEBHOOK_ASISTENCIA = URL_APPS_SCRIPT;
+        // Ambas deben usar la MISMA url de Apps Script
+        const WEBHOOK_LOGIN = URL_APPS_SCRIPT;
+        const WEBHOOK_ASISTENCIA = URL_APPS_SCRIPT;
         
         
         let inscritosGlobal = [];
